--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.m0d1x.myapplication" >
+    package="com.example.m0d1x.myapplication">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name="com.example.m0d1x.myapplication.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.m0d1x.myapplication.ColorsActivity"
+            android:label="@string/category_colors"></activity>
+        <activity
+            android:name="com.example.m0d1x.myapplication.FamilyActivity"
+            android:label="@string/category_family"
+
+            ></activity>
+        <activity
+            android:name="com.example.m0d1x.myapplication.NumbersActivity"
+            android:label="@string/category_numbers"
+
+            ></activity>
+        <activity
+            android:name="com.example.m0d1x.myapplication.PhrasesActivity"
+            android:label="@string/category_phrases"></activity>
+
     </application>
 
 </manifest>
